@@ -2,7 +2,7 @@ EXTRA_CFLAGS =
 
 CC = gcc
 
-CFLAGS = -O2 -Wall $(EXTRA_CFLAGS)
+CFLAGS = -g -O2 -Wall $(EXTRA_CFLAGS)
 LDFLAGS = -s 
 OBJS = parprouted.o arp.o
 
@@ -18,7 +18,7 @@ clean:
 	rm -f $(OBJS) parprouted core
 
 parprouted:	${OBJS}
-	${CC} -o parprouted ${OBJS} ${CFLAGS} ${LDFLAGS} ${LIBS}
+	${CC} -g -o parprouted ${OBJS} ${CFLAGS} ${LDFLAGS} ${LIBS}
 
 parprouted.8:	parprouted.pod
 	pod2man --section=8 --center="Proxy ARP Bridging Daemon" parprouted.pod --release "parprouted" --date "`date '+%B %Y'`" > parprouted.8
