@@ -1,8 +1,7 @@
-.\" Automatically generated by Pod::Man version 1.02
-.\" Wed Sep  4 14:07:36 2002
+.\" Automatically generated by Pod::Man v1.34, Pod::Parser v1.13
 .\"
 .\" Standard preamble:
-.\" ======================================================================
+.\" ========================================================================
 .de Sh \" Subsection heading
 .br
 .if t .Sp
@@ -15,12 +14,6 @@
 .if t .sp .5v
 .if n .sp
 ..
-.de Ip \" List item
-.br
-.ie \\n(.$>=3 .ne \\$3
-.el .ne 3
-.IP "\\$1" \\$2
-..
 .de Vb \" Begin verbatim text
 .ft CW
 .nf
@@ -28,15 +21,14 @@
 ..
 .de Ve \" End verbatim text
 .ft R
-
 .fi
 ..
 .\" Set up some character translations and predefined strings.  \*(-- will
 .\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
 .\" double quote, and \*(R" will give a right double quote.  | will give a
-.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used
-.\" to do unbreakable dashes and therefore won't be available.  \*(C` and
-.\" \*(C' expand to `' in nroff, nothing in troff, for use with C<>
+.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
+.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
+.\" expand to `' in nroff, nothing in troff, for use with C<>.
 .tr \(*W-|\(bv\*(Tr
 .ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
@@ -46,8 +38,8 @@
 .    if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\"  diablo 12 pitch
 .    ds L" ""
 .    ds R" ""
-.    ds C` `
-.    ds C' '
+.    ds C` ""
+.    ds C' ""
 'br\}
 .el\{\
 .    ds -- \|\(em\|
@@ -56,26 +48,25 @@
 .    ds R" ''
 'br\}
 .\"
-.\" If the F register is turned on, we'll generate index entries on stderr
-.\" for titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and
-.\" index entries marked with X<> in POD.  Of course, you'll have to process
-.\" the output yourself in some meaningful fashion.
+.\" If the F register is turned on, we'll generate index entries on stderr for
+.\" titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and index
+.\" entries marked with X<> in POD.  Of course, you'll have to process the
+.\" output yourself in some meaningful fashion.
 .if \nF \{\
 .    de IX
 .    tm Index:\\$1\t\\n%\t"\\$2"
-.    .
+..
 .    nr % 0
 .    rr F
 .\}
 .\"
-.\" For nroff, turn off justification.  Always turn off hyphenation; it
-.\" makes way too many mistakes in technical documents.
+.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
+.\" way too many mistakes in technical documents.
 .hy 0
 .if n .na
 .\"
 .\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
 .\" Fear.  Run.  Save yourself.  No user-serviceable parts.
-.bd B 3
 .    \" fudge factors for nroff and troff
 .if n \{\
 .    ds #H 0
@@ -135,23 +126,23 @@
 .    ds Ae AE
 .\}
 .rm #[ #] #H #V #F C
-.\" ======================================================================
+.\" ========================================================================
 .\"
-.IX Title "parprouted 8"
-.TH parprouted 8 "parprouted" "September 2002" "Proxy ARP Bridging Daemon"
-.UC
+.IX Title "PARPROUTED 8"
+.TH PARPROUTED 8 "January 2004" "parprouted" "Proxy ARP Bridging Daemon"
 .SH "NAME"
-\&\fBparprouted\fR \- Proxy \s-1ARP\s0 \s-1IP\s0 bridging daemon
+\&\fBparprouted\fR \- Proxy ARP IP bridging daemon
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBparprouted\fR [\fB\-d\fR] \fBinterface\fR [\fBinterface\fR]
+\&\fBparprouted\fR [\fB\-d\fR] [\fB\-p\fR] \fBinterface\fR [\fBinterface\fR]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 parprouted is a daemon for transparent \s-1IP\s0 (Layer 3) proxy \s-1ARP\s0 bridging. 
 Unlike standard bridging, proxy \s-1ARP\s0 bridging allows to bridge Ethernet 
 networks behind wireless nodes. Normal L2 bridging does not work between 
 wireless nodes because wireless does not know about \s-1MAC\s0 addresses used 
-in the wired Ethernet networks.
+in the wired Ethernet networks. Also this daemon is useful
+for making transparent firewalls.
 .PP
 The daemon will listen for incoming \s-1ARP\s0 requests and forward
 them to other interfaces, as well as update kernel \s-1ARP\s0 table with the
