@@ -7,7 +7,7 @@ B<parprouted> - Proxy ARP IP bridging daemon
 
 =head1 SYNOPSIS
 
-B<parprouted> [B<-d>] B<interface> [B<interface>]
+B<parprouted> [B<-d>] [B<-p>] B<interface> [B<interface>]
 
 =head1 DESCRIPTION
 
@@ -15,7 +15,8 @@ parprouted is a daemon for transparent IP (Layer 3) proxy ARP bridging.
 Unlike standard bridging, proxy ARP bridging allows to bridge Ethernet 
 networks behind wireless nodes. Normal L2 bridging does not work between 
 wireless nodes because wireless does not know about MAC addresses used 
-in the wired Ethernet networks.
+in the wired Ethernet networks. Also this daemon is useful
+for making transparent firewalls.
 
 The daemon will listen for incoming ARP requests and forward
 them to other interfaces, as well as update kernel ARP table with the
